--- a/generators/app/templates/app/css/app.scss
+++ b/generators/app/templates/app/css/app.scss
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300);
+@import 'page-transitions';
 
 body {
   font: 100% 'Open Sans', Helvetica, Arial, sans-serif;
