--- a/generators/app/templates/app/index.html
+++ b/generators/app/templates/app/index.html
@@ -8,7 +8,7 @@
   <link href="bundle.css" rel="stylesheet">
 </head>
 <body>
-  <div id="app"></div>
+  <div id="root"></div>
   <script src="bundle.js"></script>
 </body>
 </html>
