--- a/generators/app/templates/index.html
+++ b/generators/app/templates/index.html
@@ -5,10 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <title>App</title>
-  <link href="bundle.css" rel="stylesheet">
+  <link href="./dist/css/app.css" rel="stylesheet">
 </head>
 <body>
   <div id="root"></div>
-  <script src="bundle.js"></script>
+  <script src="./dist/js/app.js"></script>
 </body>
 </html>
